--- a/SD EXIF Editor v2/View/MainView.xaml
+++ b/SD EXIF Editor v2/View/MainView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SD_EXIF_Editor_v2.View.MainWindow"
+﻿<Window x:Class="SD_EXIF_Editor_v2.View.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
