--- a/SD EXIF Editor v2/View/MainView.xaml
+++ b/SD EXIF Editor v2/View/MainView.xaml
@@ -99,7 +99,7 @@
                             </GroupBox.Header>
                             <StackPanel>
                                 <!--Resources used-->
-                                <c:CivitItemsControl />
+                                <c:CivitItemsControl OpenUriCommand="{Binding OpenUriCommand}"/>
                                 <Separator />
                                 <!--Prompt-->
                                 <c:PromptControl Title="Prompt"
