nsfw filter now showing all the model images

--- a/SD EXIF Editor v2/Control/ViewTabControl.xaml
+++ b/SD EXIF Editor v2/Control/ViewTabControl.xaml
@@ -64,7 +64,7 @@
                 </GroupBox.Header>
                 <StackPanel>
                     <!--Resources used-->
-                    <c:CivitItemsControl OpenUriCommand="{Binding OpenUriCommand}" />
+                    <c:CivitItemsControl />
                     <Separator />
                     <!--Prompt-->
                     <c:PromptControl Title="Prompt"
