--- a/SD EXIF Editor v2/Control/CivitItemsControl.xaml
+++ b/SD EXIF Editor v2/Control/CivitItemsControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:SD_EXIF_Editor_v2.Control"
              xmlns:utils="clr-namespace:SD_EXIF_Editor_v2.Utils"
-             xmlns:m="clr-namespace:SD_EXIF_Editor_v2.Model"
+             xmlns:vm="clr-namespace:SD_EXIF_Editor_v2.ViewModel"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d"
              Name="cic"
@@ -17,13 +17,11 @@
                 <ResourceDictionary Source="../Resources/Styles.xaml" />
                 <ResourceDictionary>
                     <utils:EmptyToVisibilityConverter x:Key="EmptyToVisibilityConverter" />
+                    <utils:NotEmptyToVisibilityConverter x:Key="NotEmptyToVisibilityConverter" />
                     <utils:KilobytesToHumanConverter x:Key="KilobytesToHumanConverter" />
 
-                    <utils:BindingProxy x:Key="OpenUriCommandProxy"
-                                        Data="{Binding ElementName=cic, Path=OpenUriCommand}" />
-
                     <DataTemplate x:Key="CivitItemTemplate"
-                                  DataType="{x:Type m:CivitItem}">
+                                  DataType="{x:Type vm:CivitItemViewModel}">
                         <Grid Margin="8,6,26,6">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="3*" />
@@ -84,7 +82,7 @@
                         </Grid>
                     </DataTemplate>
                     <DataTemplate x:Key="UnknownItemTemplate"
-                                  DataType="{x:Type m:CivitItem}">
+                                  DataType="{x:Type vm:CivitItemViewModel}">
                         <Grid Margin="8,6,26,12">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="3*" />
@@ -129,41 +127,73 @@
 
                     <Popup x:Key="PopupTemplate"
                            StaysOpen="False">
-                        <Border CornerRadius="8">
+                        <Border>
                             <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="auto" />
                                     <RowDefinition Height="*" />
+                                    <RowDefinition Height="auto" />
                                 </Grid.RowDefinitions>
 
-                                <Image Source="{Binding ImageUri}"
+                                <Image Source="{Binding FilteredImages.CurrentItem.Uri}"
                                        MaxHeight="400"
-                                       MaxWidth="200"
-                                       Grid.ColumnSpan="2"
-                                       Grid.RowSpan="2" />
+                                       MaxWidth="400"
+                                       Grid.ColumnSpan="3"
+                                       Grid.RowSpan="3" />
 
-                                <Button Command="{Binding Data,Source={StaticResource OpenUriCommandProxy}}"
-                                        CommandParameter="{Binding SiteUri}"
-                                        Padding="8"
-                                        Opacity="0.9">
-                                    <iconPacks:BootstrapIcons Kind="BoxArrowUpRight" />
-                                </Button>
-                                <Button Command="{Binding Data,Source={StaticResource OpenUriCommandProxy}}"
-                                        CommandParameter="{Binding DownloadUri}"
-                                        Padding="8"
-                                        Opacity="0.9"
-                                        Grid.Column="1"
-                                        HorizontalAlignment="Right">
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="{Binding SizeKB, Converter={StaticResource KilobytesToHumanConverter}}" />
-                                        <Separator Margin="4" />
-                                        <iconPacks:BootstrapIcons Kind="Download" />
-                                    </StackPanel>
-                                </Button>
+                                <Border Width="300"
+                                        Height="100"
+                                        Grid.Row="1">
+                                    <TextBlock Text="Images hidden due to mature content settings"
+                                               TextWrapping="WrapWithOverflow" 
+                                               VerticalAlignment="Center"
+                                               HorizontalAlignment="Center"
+                                               Visibility="{Binding FilteredImages, Converter={StaticResource NotEmptyToVisibilityConverter}}"/>
+                                </Border>
+
+                                <DockPanel Grid.Row="0"
+                                           LastChildFill="False">
+                                    <Button Command="{Binding OpenUriCommand}"
+                                            CommandParameter="{Binding SiteUri}"
+                                            Padding="8"
+                                            Opacity="0.8"
+                                            DockPanel.Dock="Left">
+                                        <iconPacks:BootstrapIcons Kind="BoxArrowUpRight" />
+                                    </Button>
+                                    <Button Command="{Binding OpenUriCommand}"
+                                            CommandParameter="{Binding DownloadUri}"
+                                            Padding="8"
+                                            Opacity="0.8"
+                                            Grid.Column="1"
+                                            HorizontalAlignment="Right"
+                                            DockPanel.Dock="Right">
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="{Binding SizeKB, Converter={StaticResource KilobytesToHumanConverter}}" />
+                                            <Separator Margin="4" />
+                                            <iconPacks:BootstrapIcons Kind="Download" />
+                                        </StackPanel>
+                                    </Button>
+                                </DockPanel>
+
+                                <DockPanel Grid.Row="2"
+                                           LastChildFill="False">
+                                    <Button Command="{Binding PrevImageCommand}"
+                                            Grid.Row="2"
+                                            Grid.Column="0"
+                                            Padding="8"
+                                            Opacity="0.8"
+                                            DockPanel.Dock="Left">
+                                        <iconPacks:BootstrapIcons Kind="ArrowLeft" />
+                                    </Button>
+                                    <Button Command="{Binding NextImageCommand}"
+                                            Grid.Row="2"
+                                            Grid.Column="2"
+                                            Padding="8"
+                                            Opacity="0.8"
+                                            DockPanel.Dock="Right">
+                                        <iconPacks:BootstrapIcons Kind="ArrowRight" />
+                                    </Button>
+                                </DockPanel>
                             </Grid>
                         </Border>
                     </Popup>
@@ -180,7 +210,7 @@
             <ProgressBar IsIndeterminate="True"
                          Height="12"
                          Visibility="{Binding IsCivitBusy, Converter={StaticResource B2VConverter}}" />
-            <ItemsControl ItemsSource="{Binding CivitItems}"
+            <ItemsControl ItemsSource="{Binding CivitItemViewModels}"
                           ItemTemplateSelector="{StaticResource CivitItemTemplateSelector}">
             </ItemsControl>
         </StackPanel>
