made models readonly

--- a/SD EXIF Editor v2/Control/SettingsTabControl.xaml
+++ b/SD EXIF Editor v2/Control/SettingsTabControl.xaml
@@ -26,7 +26,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
+    <Grid Margin="12">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="24" />
