--- a/SD EXIF Editor v2/Control/ViewTabControl.xaml
+++ b/SD EXIF Editor v2/Control/ViewTabControl.xaml
@@ -70,13 +70,15 @@
                     <c:PromptControl Title="Prompt"
                                      Prompt="{Binding Metadata.Prompt}"
                                      CopyCommand="{Binding CopyCommand}"
-                                     Style="{StaticResource HideIfEmptyPrompt}" />
+                                     ShouldDisplayHeader="{Binding ShouldDisplayPromptHeader}"
+                                     ShouldDisplayPlaceholder="{Binding ShouldDisplayPlaceholder}"/>
                     <!--Negative prompt-->
                     <c:PromptControl Title="Negative Prompt"
                                      Prompt="{Binding Metadata.NegativePrompt}"
                                      CopyCommand="{Binding CopyCommand}"
-                                     Style="{StaticResource HideIfEmptyNegativePrompt}" />
-                    <Separator Style="{StaticResource HideIfEmptyAllPrompts}" />
+                                     ShouldDisplayHeader="{Binding ShouldDisplayNegativePromptHeader}"
+                                     ShouldDisplayPlaceholder="{Binding ShouldDisplayNegativePlaceholder}" />
+                    <Separator />
                     <!--Other metadata-->
                     <c:OtherMetadataControl />
                 </StackPanel>
