--- a/SD EXIF Editor v2/Control/ViewTabControl.xaml
+++ b/SD EXIF Editor v2/Control/ViewTabControl.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl x:Class="SD_EXIF_Editor_v2.Control.ViewTabControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:SD_EXIF_Editor_v2.Control"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:c="clr-namespace:SD_EXIF_Editor_v2.Control"
@@ -10,16 +10,10 @@
              xmlns:dt="clr-namespace:SD_EXIF_Editor_v2.ViewModel.DesignTime"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance {x:Type dt:DesignTimeViewViewModel}, IsDesignTimeCreatable=True}"
-             d:DesignHeight="500" d:DesignWidth="800">
+             d:DesignHeight="500"
+             d:DesignWidth="800">
     <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Resources/Styles.xaml" />
-                <ResourceDictionary>
-                    <utils:SubtractionConverter x:Key="SubtractionConverter" />
-                </ResourceDictionary>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
+        <utils:SubtractionConverter x:Key="SubtractionConverter" />
     </UserControl.Resources>
     <ScrollViewer HorizontalScrollBarVisibility="Disabled"
                   VerticalScrollBarVisibility="Auto"
