--- a/SD EXIF Editor v2/Controls/Tabs/SettingsTabControl.xaml
+++ b/SD EXIF Editor v2/Controls/Tabs/SettingsTabControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SD_EXIF_Editor_v2.Control"
              xmlns:System="clr-namespace:System;assembly=mscorlib"
-             xmlns:s="clr-namespace:SD_EXIF_Editor_v2.Service"
+             xmlns:s="clr-namespace:SD_EXIF_Editor_v2.Services.Interfaces"
              xmlns:vm="clr-namespace:SD_EXIF_Editor_v2.ViewModel"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type={x:Type vm:SettingsViewModel}}"
